--- a/TSR.ini
+++ b/TSR.ini
@@ -4,5 +4,6 @@ hidden=False
 type=D2E
 defaultlanguage=English
 image=Intro.jpg
-version=57-1B-33-45-7A-DE-8B-BC-4E-BC-24-3D-AE-41-3A-62-FF-90-D3-A3-B5-03-83-EE-D2-B2-AA-29-14-0C-F2-C3
+version=62-0B-01-47-B0-7E-43-A5-14-C9-A1-43-F4-78-09-20-F2-C3-E6-00-A4-C2-8C-F1-D5-F1-92-7C-44-C9-49-17
 name.English=The Shadow Rune
+name.German=Die Schattenrune
