--- a/TSR.ini
+++ b/TSR.ini
@@ -4,6 +4,7 @@ hidden=False
 type=D2E
 defaultlanguage=English
 image=Intro.jpg
-version=62-0B-01-47-B0-7E-43-A5-14-C9-A1-43-F4-78-09-20-F2-C3-E6-00-A4-C2-8C-F1-D5-F1-92-7C-44-C9-49-17
+version=82-10-11-3C-FD-D4-5A-99-26-19-81-30-EA-08-A8-6D-F5-6C-29-39-B9-C5-77-62-62-33-B0-B7-E2-86-B0-48
 name.English=The Shadow Rune
 name.German=Die Schattenrune
+name.Italian=La Runa d'Ombra
