--- a/TSR.ini
+++ b/TSR.ini
@@ -4,7 +4,8 @@ hidden=False
 type=D2E
 defaultlanguage=English
 image=Intro.jpg
-version=EA-E5-BD-1B-BD-DD-C7-02-D8-07-93-75-0A-40-D8-25-64-FF-A7-89-1B-CB-AC-17-BC-75-A5-9E-1F-09-4E-72
+version=B0-BB-BD-39-96-9F-E5-F7-4E-89-50-C5-30-AE-99-D7-F9-D6-B9-2D-C0-A5-9C-9A-97-E9-E2-7B-0D-15-25-E3
 name.English=The Shadow Rune
 name.German=Die Schattenrune
 name.Italian=La Runa d'Ombra
+name.Spanish=La Runa de las Sombras
