--- a/TSR.ini
+++ b/TSR.ini
@@ -1,11 +1,19 @@
 [Quest]
-format=9
+format=10
 hidden=False
 type=D2E
 defaultlanguage=English
 image=Intro.jpg
-version=B0-BB-BD-39-96-9F-E5-F7-4E-89-50-C5-30-AE-99-D7-F9-D6-B9-2D-C0-A5-9C-9A-97-E9-E2-7B-0D-15-25-E3
+version=3C-6C-ED-72-BC-07-1F-FC-04-AF-42-B7-C8-F5-91-9C-23-7D-C1-C7-7A-9C-8C-CB-5F-21-52-D3-D6-A1-AE-DE
 name.English=The Shadow Rune
 name.German=Die Schattenrune
 name.Italian=La Runa d'Ombra
 name.Spanish=La Runa de las Sombras
+description.English=A digital adaption of the campaign "The Shadow Rune" for Descent 2nd Edition.\n\nCompatiblity: Please use the latest Valkyrie release to run this campaign.
+description.German=Eine digitale Adaption der Kampagne "Die Schattenrune" für Descent 2. Edition.
+description.Italian=Un adattamento digitale della campagna "La Runa d'Ombra" per Descent seconda edizione.
+description.Spanish=Una adaptación digital de la campaña "La Runa de las Sombras" para Descent Segunda Edición.\n\n Compatibilidad: Por favor use Valkyrie release 2.1.2 o superior para jugar esta campaña.
+authors.English=Sadgit, Delphi, Dan, Charles, Tantum
+authors.German=Sadgit, Delphi, Dan, Charles, Tantum\n\nÜbersetzung: Tantum
+authors.Italian=Sadgit, Delphi, Dan, Charles, Tantum\n\nTraduzione: Stregabbo
+authors.Spanish=Sadgit, Delphi, Dan, Charles, Tantum
