--- a/TSR.ini
+++ b/TSR.ini
@@ -4,15 +4,15 @@ hidden=False
 type=D2E
 defaultlanguage=English
 image=Intro.jpg
-version=2B-CF-15-6E-9C-02-0A-E8-7B-6D-E8-83-E7-91-93-63-52-AC-06-36-1E-BE-3F-90-BF-62-48-44-F8-2C-DE-BC
+version=6F-6F-9C-69-59-48-D4-65-AF-FE-37-E0-B7-9D-06-C2-F2-07-44-39-56-99-3C-79-C4-2D-43-CD-63-2B-58-E5
 name.English=The Shadow Rune
 name.German=Die Schattenrune
 name.Italian=La Runa d'Ombra
 name.Spanish=La Runa de las Sombras
-description.English=A digital adaption of the campaign "The Shadow Rune" for Descent 2nd Edition.\n\nCompatiblity: Please use the latest Valkyrie release to run this campaign.
-description.German=Eine digitale Adaption der Kampagne "Die Schattenrune" für Descent 2. Edition.
-description.Italian=Un adattamento digitale della campagna "La Runa d'Ombra" per Descent seconda edizione.
-description.Spanish=Una adaptación digital de la campaña "La Runa de las Sombras" para Descent Segunda Edición.\n\n Compatibilidad: Por favor use Valkyrie release 2.1.2 o superior para jugar esta campaña.
+description.English=A digital adaption of the campaign "The Shadow Rune" for Descent 2nd Edition.\n\nCompatiblity: Please use the latest Valkyrie release to run this campaign.\n Please report bugs at: https://github.com/DelphiDie/TheShadowRune/issues.
+description.German=Eine digitale Adaption der Kampagne "Die Schattenrune" für Descent 2. Edition. Bitte melden Sie Fehler unter: https://github.com/DelphiDie/TheShadowRune/issues
+description.Italian=Un adattamento digitale della campagna "La Runa d'Ombra" per Descent seconda edizione. Si prega di segnalare i bug all'indirizzo: https://github.com/DelphiDie/TheShadowRune/issues
+description.Spanish=Una adaptación digital de la campaña "La Runa de las Sombras" para Descent Segunda Edición.\n\n Compatibilidad: Por favor use Valkyrie release 2.1.2 o superior para jugar esta campaña. Por favor, informe de errores en: https://github.com/DelphiDie/TheShadowRune/issues
 authors.English=Sadgit, Delphi, Dan, Charles, Tantum
 authors.German=Sadgit, Delphi, Dan, Charles, Tantum\n\nÜbersetzung: Tantum
 authors.Italian=Sadgit, Delphi, Dan, Charles, Tantum\n\nTraduzione: Stregabbo
