--- a/TSR.ini
+++ b/TSR.ini
@@ -1,12 +1,16 @@
 [Quest]
-format=10
+format=12
 hidden=False
 type=D2E
 defaultlanguage=English
 image=Intro.jpg
-version=13-3E-0E-55-02-E2-1B-17-77-49-3D-6F-2F-29-54-B5-61-9B-09-6E-7A-FF-2B-F1-AC-49-75-DA-F8-93-56-32
+version=F0-5E-CD-B4-59-43-E6-BE-81-6A-0D-CC-06-84-8E-36-BF-51-6D-4B-47-18-9C-2B-7A-CB-1C-96-05-24-36-72
 name.English=The Shadow Rune
 name.German=Die Schattenrune
 name.Italian=La Runa d'Ombra
 name.Spanish=La Runa de las Sombras
 description.English=A digital adaption of the campaign "The Shadow Rune" for Descent 2nd Edition.\n\nCompatiblity: Please use the latest Valkyrie release to run this campaign.\n Please report bugs at: https://github.com/DelphiDie/TheShadowRune/issues.
+authors.English=Sadgit, Delphi, Dan, Charles, Tantum
+authors.German=Sadgit, Delphi, Dan, Charles, Tantum
+authors.Italian=Sadgit, Delphi, Dan, Charles, Tantum
+authors.Spanish=Sadgit, Delphi, Dan, Charles, Tantum
