--- a/TSR.ini
+++ b/TSR.ini
@@ -1,15 +1,17 @@
 [Quest]
-format=12
+format=13
 hidden=False
 type=D2E
 defaultlanguage=English
+defaultmusicon=True
 image=Intro.jpg
-version=0E-39-2D-B2-7F-55-CA-9B-73-68-87-0A-73-1E-31-6D-29-9B-1C-18-01-81-03-D3-E9-99-28-AD-C3-9F-6A-E2
+version=CD-B5-0C-4D-A9-76-4B-1A-31-70-24-B5-F2-FA-12-7E-90-B1-A9-06-C5-15-81-37-AC-CA-39-F7-0A-EC-C5-D5
 name.English=The Shadow Rune
 name.German=Die Schattenrune
 name.Italian=La Runa d'Ombra
 name.Spanish=La Runa de las Sombras
-description.English=A digital adaption of the campaign "The Shadow Rune" for Descent 2nd Edition.\n\nCompatiblity: Please use the latest Valkyrie release to run this campaign.\n Please report bugs at: https://github.com/DelphiDie/TheShadowRune/issues.
+description.English=A digital adaption of the campaign "The Shadow Rune" for Descent 2nd Edition.\n\nCompatiblity: Please use Valkyrie-Version 2.4.07a or higher to run this campaign.\n Please report bugs at: https://github.com/DelphiDie/TheShadowRune/issues.
+description.German=Eine digitale Adaption der Kampagne <b>Die Schattenrune</b> für Descent 2. Edition.\n\n\nKompatibilität: Bitte benutzt die Valkyrie-Version 2.4.07a oder höher, um diese Kampagne zu starten. Bitte meldet Fehler unter: https://github.com/DelphiDie/TheShadowRune/issues.
 authors.English=Sadgit, Delphi, Dan, Charles, Tantum
 authors.German=Sadgit, Delphi, Dan, Charles, Tantum
 authors.Italian=Sadgit, Delphi, Dan, Charles, Tantum
