--- a/TSR.ini
+++ b/TSR.ini
@@ -5,13 +5,13 @@ type=D2E
 defaultlanguage=English
 defaultmusicon=True
 image=Intro.jpg
-version=CD-B5-0C-4D-A9-76-4B-1A-31-70-24-B5-F2-FA-12-7E-90-B1-A9-06-C5-15-81-37-AC-CA-39-F7-0A-EC-C5-D5
+version=2D-65-98-96-DD-F4-67-21-F2-67-A0-97-05-F2-A5-3D-D5-86-DB-6D-9D-4F-D5-88-F6-46-3D-D0-08-43-3A-2B
 name.English=The Shadow Rune
 name.German=Die Schattenrune
 name.Italian=La Runa d'Ombra
 name.Spanish=La Runa de las Sombras
-description.English=A digital adaption of the campaign "The Shadow Rune" for Descent 2nd Edition.\n\nCompatiblity: Please use Valkyrie-Version 2.4.07a or higher to run this campaign.\n Please report bugs at: https://github.com/DelphiDie/TheShadowRune/issues.
-description.German=Eine digitale Adaption der Kampagne <b>Die Schattenrune</b> für Descent 2. Edition.\n\n\nKompatibilität: Bitte benutzt die Valkyrie-Version 2.4.07a oder höher, um diese Kampagne zu starten. Bitte meldet Fehler unter: https://github.com/DelphiDie/TheShadowRune/issues.
+description.English=A digital adaption of the campaign "The Shadow Rune" for Descent 2nd Edition.\n\nCompatiblity please use the latest Valkyrie version to run this campaign.\n Please report bugs at: https://github.com/DelphiDie/TheShadowRune/issues.
+description.German=Eine digitale Adaption der Kampagne <b>Die Schattenrune</b> für Descent 2. Edition.\n\n\nKompatibilität: Bitte die aktuellste Valkyrie Version, um diese Kampagne zu starten. Bitte meldet Fehler unter: https://github.com/DelphiDie/TheShadowRune/issues.
 authors.English=Sadgit, Delphi, Dan, Charles, Tantum
 authors.German=Sadgit, Delphi, Dan, Charles, Tantum
 authors.Italian=Sadgit, Delphi, Dan, Charles, Tantum
