Fixed incorrect ini file.

--- a/TSR.ini
+++ b/TSR.ini
@@ -1,11 +1,14 @@
 [Quest]
-format=18
+format=17
 hidden=False
 type=D2E
 defaultlanguage=English
 defaultmusicon=True
 image=Intro.jpg
-version=C6-83-4D-BD-78-66-55-3E-A1-87-67-C4-FD-F9-07-6E-9D-6D-1A-CB-6E-13-00-F1-81-D7-CE-03-9A-75-DB-40
+version=AC-3D-55-83-3B-1C-DB-7B-BA-51-E7-10-8C-1F-11-5E-70-9D-80-A6-54-BB-37-9A-73-62-32-DB-5F-1A-EB-A6
 name.English=The Shadow Rune
+name.German=Die Schattenrune
 description.English=A digital adaption of the campaign "The Shadow Rune" for Descent 2nd Edition.\n\nCompatiblity please use the latest Valkyrie version to run this campaign.\n Please report bugs at: https://github.com/DelphiDie/TheShadowRune/issues.
+description.German=Eine digitale Adaption der Kampagne <b>Die Schattenrune</b> für Descent 2. Edition.\n\n\nKompatibilität: Bitte die aktuellste Valkyrie Version, um diese Kampagne zu starten. Bitte meldet Fehler unter: https://github.com/DelphiDie/TheShadowRune/issues.
 authors.English=Sadgit, Delphi, Dan, Charles, Tantum
+authors.German=Sadgit, Delphi, Dan, Charles, Tantum
