Added missing synopsis.

--- a/TSR.ini
+++ b/TSR.ini
@@ -5,10 +5,14 @@ type=D2E
 defaultlanguage=English
 defaultmusicon=True
 image=Intro.jpg
-version=2A-40-AF-E6-D9-3C-CA-00-97-C7-94-C2-C0-6F-5B-C3-C0-D9-0E-E0-FA-88-0D-3A-9B-04-79-E4-32-67-F1-00
+version=04-1C-DB-C4-1B-A1-01-AB-C2-3F-66-9A-AB-48-1A-F5-68-6A-E1-E4-46-CC-19-B4-7C-6C-FA-E8-F2-40-3D-73
 name.English=The Shadow Rune
 name.German=Die Schattenrune
-description.English=A digital adaption of the campaign "The Shadow Rune" for Descent 2nd Edition.\n\nCompatiblity please use the latest Valkyrie version to run this campaign.\n Please report bugs at: https://github.com/DelphiDie/TheShadowRune/issues.
+synopsys.English=A digital adaption of the campaign <b>The Shadow Rune</b> for Descent 2nd Edition.
+synopsys.German=Eine digitale Adaption der Kampagne <b>Die Schattenrune</b> für Descent 2. Edition.
+description.English=A digital adaption of the campaign <b>The Shadow Rune</b> for Descent 2nd Edition.\n\nCompatiblity please use the latest Valkyrie version to run this campaign.\n\n Please report bugs at: https://github.com/DelphiDie/TheShadowRune/issues.
 description.German=Eine digitale Adaption der Kampagne <b>Die Schattenrune</b> für Descent 2. Edition.\n\n\nKompatibilität: Bitte die aktuellste Valkyrie Version, um diese Kampagne zu starten. Bitte meldet Fehler unter: https://github.com/DelphiDie/TheShadowRune/issues.
-authors.English=Sadgit, Delphi, Dan, Charles, Tantum
-authors.German=Sadgit, Delphi, Dan, Charles, Tantum
+authors.English=Tantum, Sadgit, Delphi, Dan, Charles
+authors.German=Tantum, Sadgit, Delphi, Dan, Charles
+authors_short.English=Tantum, Sadgit, Delphi, Dan, Charles
+authors_short.German=Tantum, Sadgit, Delphi, Dan, Charles
