Added spanish translation

--- a/TSR.ini
+++ b/TSR.ini
@@ -5,14 +5,19 @@ type=D2E
 defaultlanguage=English
 defaultmusicon=True
 image=Intro.jpg
-version=07-D2-C6-B1-4D-50-AA-EF-87-73-4F-7B-17-5A-EC-6E-A4-EE-E1-E5-79-F3-99-E8-24-74-0E-EF-8D-B9-9B-FD
+version=33-20-13-6F-00-75-9B-C7-7A-F6-1D-8D-B8-5C-9C-57-B2-1B-CA-C6-33-A9-C9-96-3F-BC-63-25-2E-8C-DF-2C
 name.English=The Shadow Rune
 name.German=Die Schattenrune
+name.Spanish=La Runa de las Sombras
 synopsys.English=A digital adaption of the campaign <b>The Shadow Rune</b> for Descent 2nd Edition.
 synopsys.German=Eine digitale Adaption der Kampagne <b>Die Schattenrune</b> für Descent 2. Edition.
+synopsys.Spanish=Una adaptación digital de la campaña <b>La Runa de las Sombras</b> para Descent, 2ª edición.
 description.English=A digital adaption of the campaign <b>The Shadow Rune</b> for Descent 2nd Edition.\n\nCompatiblity please use the latest Valkyrie version to run this campaign.\n\n Please report bugs at: https://github.com/DelphiDie/TheShadowRune/issues.
 description.German=Eine digitale Adaption der Kampagne <b>Die Schattenrune</b> für Descent 2. Edition.\n\n\nKompatibilität: Bitte die aktuellste Valkyrie Version, um diese Kampagne zu starten. Bitte meldet Fehler unter: https://github.com/DelphiDie/TheShadowRune/issues.
+description.Spanish=Una adaptación digital de la campaña <b>La Runa de las Sombras</b> para Descent, 2ª edición. \n\n Compatibilidad: por favor, usa la última versión de Valkyrie disponible para ejecutar esta campaña. \n\n Por favor, informa de cualquier incidencia que encuentres en: https://github.com/DelphiDie/TheShadowRune/issues
 authors.English=Tantum, Sadgit, Delphi, Dan, Charles
 authors.German=Tantum, Sadgit, Delphi, Dan, Charles
+authors.Spanish=\n <i>Creada por:</i> \n\n Tantum, Sadgit, Delphi, Dan, Charles \n\n <i>Traducción al español: </i> \n\n Damiau, Kelmys, Frankman8, Vidimus y Xavi \n
 authors_short.English=Tantum, Sadgit, Delphi, Dan, Charles
 authors_short.German=Tantum, Sadgit, Delphi, Dan, Charles
+authors_short.Spanish=Tantum, Sadgit, Delphi, Dan, Charles
