Added japanese translation

--- a/TSR.ini
+++ b/TSR.ini
@@ -5,19 +5,24 @@ type=D2E
 defaultlanguage=English
 defaultmusicon=True
 image=Intro.jpg
-version=4F-89-F1-55-3D-3D-70-ED-20-58-A2-FB-52-C7-04-DC-CC-D7-C5-40-52-36-79-F1-25-9C-9E-32-1B-69-27-F0
+version=2F-5D-26-D5-31-4A-64-B7-BB-E4-71-2E-C2-ED-10-B0-BE-1E-2E-F8-77-BF-8D-48-EA-DA-21-A4-BE-8D-A3-BD
 name.English=The Shadow Rune
 name.German=Die Schattenrune
 name.Spanish=La Runa de las Sombras
+name.Japanese=シャドウルーン
 synopsys.English=A digital adaption of the campaign <b>The Shadow Rune</b> for Descent 2nd Edition.
 synopsys.German=Eine digitale Adaption der Kampagne <b>Die Schattenrune</b> für Descent 2. Edition.
 synopsys.Spanish=Una adaptación digital de la campaña <b>La Runa de las Sombras</b> para Descent, 2ª edición.
+synopsys.Japanese=A digital adaption of the campaign <b>The Shadow Rune</b> for Descent 2nd Edition.
 description.English=A digital adaption of the campaign <b>The Shadow Rune</b> for Descent 2nd Edition.\n\nCompatiblity please use the latest Valkyrie version to run this campaign.\n\n Please report bugs at: https://github.com/DelphiDie/TheShadowRune/issues.
 description.German=Eine digitale Adaption der Kampagne <b>Die Schattenrune</b> für Descent 2. Edition.\n\n\nKompatibilität: Bitte die aktuellste Valkyrie Version, um diese Kampagne zu starten. Bitte meldet Fehler unter: https://github.com/DelphiDie/TheShadowRune/issues.
 description.Spanish=Una adaptación digital de la campaña <b>La Runa de las Sombras</b> para Descent, 2ª edición. \n\n Compatibilidad: por favor, usa la última versión de Valkyrie disponible para ejecutar esta campaña. \n\n Por favor, informa de cualquier incidencia que encuentres en: https://github.com/DelphiDie/TheShadowRune/issues
+description.Japanese=A digital adaption of the campaign "The Shadow Rune" for Descent 2nd Edition.\n\nCompatiblity please use the latest Valkyrie version to run this campaign.\n Please report bugs at: https://github.com/DelphiDie/TheShadowRune/issues.
 authors.English=Tantum, Sadgit, Delphi, Dan, Charles
 authors.German=Tantum, Sadgit, Delphi, Dan, Charles
 authors.Spanish=\n <i>Creada por:</i> \n\n Tantum, Sadgit, Delphi, Dan, Charles \n\n <i>Traducción al español: </i> \n\n Damiau, Kelmys, Frankman8, Vidimus y Xavi \n
+authors.Japanese=Sadgit, Delphi, Dan, Charles, Tantum, Proarm
 authors_short.English=Tantum, Sadgit, Delphi, Dan, Charles
 authors_short.German=Tantum, Sadgit, Delphi, Dan, Charles
 authors_short.Spanish=Tantum, Sadgit, Delphi, Dan, Charles
+authors_short.Japanese=Tantum, Sadgit, Delphi, Dan, Charles
